--- a/lesson-2/lesson-2.csproj
+++ b/lesson-2/lesson-2.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6" />
+    <!-- <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" /> -->
   </ItemGroup>
 
 </Project>
