--- a/lesson-2/.editorconfig
+++ b/lesson-2/.editorconfig
@@ -2,3 +2,6 @@
 
 # IDE0210: Convert to top-level statements
 csharp_style_prefer_top_level_statements = true
+
+# IDE0005: Using directive is unnecessary.
+dotnet_diagnostic.IDE0005.severity = none
